added queries and new typeDefs, Also added new scripts and concurrently package to global package.json

--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "concurrently": "^5.1.0"
   },
   "scripts": {
     "start": " cd client && react-scripts start",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "seed": "node server/config/seeds.js"
   },
   "eslintConfig": {
     "extends": [
