--- a/client/package.json
+++ b/client/package.json
@@ -26,9 +26,13 @@
     "@stripe/stripe-js": "^1.21.1",
     "gh-pages": "^3.2.3",
     "graphql": "^16.0.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "stripe": "^8.191.0"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
