--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "gh-pages": "^3.2.3",
     "graphql": "^16.0.1",
     "react": "^17.0.2",
+    "jwt-decode": "^3.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
