--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/user-event": "^12.8.3",
+    "apollo-server-express": "^2.12.0",
     "bootstrap": "^5.1.3",
-    "materialize-css": "^1.0.0-rc.2",
-    "web-vitals": "^1.1.2",
     "concurrently": "^5.1.0",
     "graphql": "^15.5.1",
-    "apollo-server-express": "^2.12.0"
+    "materialize-css": "^1.0.0-rc.2",
+    "mongoose": "^6.0.14",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": " cd client && react-scripts start",
@@ -20,7 +21,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "seed": "node server/config/seeds.js"
+    "seed": "node server/config/seeds.js",
+    "install": "cd server && npm i && cd ../client && npm i"
   },
   "eslintConfig": {
     "extends": [
