--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "gh-pages": "^3.2.3",
     "graphql": "^16.0.1",
     "jwt-decode": "^3.1.2",
+    "materialize-css": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
