--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gamaro",
   "version": "0.1.0",
   "private": true,
+  "engines": {"node": "16.x"},
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/user-event": "^12.8.3",
