--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": " cd client && react-scripts start",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "build": "react-scripts build",
+    "build": " cd client && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
